2012-12-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.h,
	* src/hc08/ralloc.c,
	* src/hc08/gen.c: optimization of literal constant loads/transfers

2012-12-31 Raphael Neider <rneider AT web.de>

	* src/pic14/genarith.c (genAddLit): fixed coding style,
	  fixed #3599010 by adding implementation of (int + X)
	  for X in [0x0102; 0x01FE]

2012-12-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCbtree.cc:
	  Fix bug #3598841.

2012-12-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc_vc.h.in: converted TABs to spaces
	* src/SDCCast.c(expandInlineFuncs): even MSVC 2012 still does not support
	  C99 randomly placed declarations, please place all declarations at the
	  start of a block
	* src/sdcc.vcxproj,
	* src/sdcc.vcxproj.filters: added SDCCbtree.cc and SDCCbtree.h
	* src/SDCCbtree.cc: fixed STX usage

2012-12-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20011126-1.c,
	  support/regression/tests/gcc-torture-execute-20000717-2.c,
	  support/regression/tests/gcc-torture-execute-921202-2.c,
	  support/regression/tests/gcc-torture-execute-20050104-1.c:
	  Enable some long long regression tests, that now seem to work even on
	  32-bit systems.

2012-12-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: small update about sdas390
	* sdas/asgb/gbpst.c: enable macros
	* sdas/asxxsrc/aslex.c (nxtline): also fix macro case
	* sdas/asxxsrc/asmcro.c,
	* sdas/asxxsrc/asout.c,
	* sdas/asxxsrc/asxxxx.h: small step to ASxxxx v5
	* src/mcs51/gen.c(genJumpTab): use optimize.codeSpeed and options.acall_ajmp
	* src/SDCCast.c(createFunction): fixed warning
	* src/SDCCpeeph.c: cosmetics
	* support/regression/tests/bug3467508.c: suppress warnings
	* support/regression/tests/gcc-torture-execute-20050125-1.c: fixed warning
	* support/regression/tests/gcc-torture-execute-20050224-1.c: shortened test,
	  always perform ASSERT for correct statistics